# fs-tracer-backend

./: .bazelrc  .gitignore  MODULE.bazel  README.md  TODO  deploy.sh  docker-compose.yml  flake.nix  go.mod  go.sum  kind-config.yml  requests_examples.sh
k8s/: helmsman.yml  kafka-ui.yml  metallb.yml  metallb_config.yml
k8s/metallb-config/templates/: metallb.yml
k8s/payload-processor/: BUILD.bazel  Chart.yaml  values.yaml
k8s/payload-processor/templates/: _helpers.tpl  deployment.yaml  serviceaccount.yaml
k8s/payloads-processor/: Chart.yaml  values.yaml
k8s/payloads-processor/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
k8s/payloads-processor/templates/tests/: test-connection.yaml
k8s/rest-api/: BUILD.bazel  README.md  values.yaml
k8s/rest-api/templates/: NOTES.txt  deployment.yaml  service.yaml
lib/: BUILD.bazel  model.go
src/payload-processor/cmd/: BUILD.bazel  main.go
src/payload-processor/processor/: BUILD.bazel  db.go  mock_db.go  model.go  processor.go  processor_test.go
src/rest-api/: Dockerfile  build-and-push-to-registry.sh
src/rest-api/cmd/: BUILD.bazel  main.go
src/rest-api/handler/: BUILD.bazel  db.go  handler.go  handler_test.go  mock_db.go
supabase/: config.toml
supabase/migrations/: 20240525164247_create_file_table.sql  20240528175243_create_api_keys_table.sql  20240605214214_create_file_table.sql  20240605214222_create_api_key_table.sql
