load("@rules_helm//helm:defs.bzl", "helm_chart")

helm_chart(
    name = "chart",
    chart = "Chart.yaml",
    images = ["//src/rest-api/cmd:push"],
    install_name = "rest-api",
    stamp = 1,
    substitutions = {
        "IMAGE_TAG": "rest-api-{STABLE_GIT_SHA}",
        "DB_PASSWORD": "{DB_PASSWORD}",
    },
    values = "values.yaml",
)
