load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "processor",
    srcs = ["processor.go"],
    importpath = "github.com/Baitinq/fs-tracer-backend/src/payload-processor/processor",
    visibility = ["//visibility:public"],
    deps = ["@com_github_segmentio_kafka_go//:kafka-go"],
)

go_test(
    name = "processor_test",
    srcs = ["processor_test.go"],
    embed = [":processor"],
    deps = [
        "@com_github_segmentio_kafka_go//:kafka-go",
        "@com_github_stretchr_testify//require",
    ],
)
