load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "processor",
    srcs = [
        "db.go",
        "mock_db.go",
        "processor.go",
    ],
    importpath = "github.com/Baitinq/fs-tracer-backend/src/payload-processor/processor",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/jmoiron/sqlx",
        "//vendor/github.com/segmentio/kafka-go",
        "//vendor/go.uber.org/mock/gomock",
    ],
)

go_test(
    name = "processor_test",
    srcs = ["processor_test.go"],
    embed = [":processor"],
    deps = [
        "//vendor/github.com/segmentio/kafka-go",
        "//vendor/github.com/stretchr/testify/require",
        "//vendor/go.uber.org/mock/gomock",
    ],
)
