load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "processor",
    srcs = [
        "db.go",
        "mock_db.go",
        "processor.go",
    ],
    importpath = "github.com/Baitinq/fs-tracer-backend/src/payload-processor/processor",
    visibility = ["//visibility:public"],
    deps = [
        "//lib",
        "@com_github_jmoiron_sqlx//:sqlx",
        "@com_github_segmentio_kafka_go//:kafka-go",
        "@org_uber_go_mock//gomock",
    ],
)

go_test(
    name = "processor_test",
    srcs = ["processor_test.go"],
    embed = [":processor"],
    deps = [
        "//lib",
        "@com_github_segmentio_kafka_go//:kafka-go",
        "@com_github_stretchr_testify//require",
        "@org_uber_go_mock//gomock",
    ],
)
